--- a/serverless.yml
+++ b/serverless.yml
@@ -20,5 +20,5 @@ functions:
     handler: handler.sshScheduler
     events:
       - schedule:
-          rate: cron(0/5 * ? * * *)
+          rate: cron(0 3 ? * MON-FRI *)
           enabled: true
